improve navigation on mobile
Signed-off-by: Tassu <hi@tassu.me>

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -35,3 +35,11 @@
 th {
     @apply text-left;
 }
+
+.navbar-item {
+    @apply ml-4;
+
+    @screen lg {
+        @apply inline-flex justify-center items-center;
+    }
+}
